refctored code